# agentic-ai-template

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  docker-compose-local.yml  docker-compose.yml  setup-local.sh  setup.sh
.github/codeql/: codeql-config.yml
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .env.example  .gitignore  BACKEND_CODE_REVIEW_PROMPT.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0d4217dceffa_add_media_json_to_conversation_message.py  1453168337f4_add_rag_settings_tables.py  1861410445fb_add_documents_and_embeddings_tables_.py  241d44df2254_add_conversation_model.py  270386205709_add_theme_settings_tables.py  4b9e4fc41ca2_initial_tables.py  919cdde4848d_add_sources_json_to_conversation_message.py  959c0f0c6e08_add_conversation_message_index_table_.py  a1b2c3d4e5f6_add_profile_image_url_to_user.py  a3732d34e9a7_add_password_history.py  b1c2d3e4f5g6_add_multi_tenant_architecture.py  bec5ec068ea5_add_user_language_field.py  c2d3e4f5g6h7_add_password_changed_at.py  c31a09395cb5_add_guardrail_blocked_to_conversation_.py  d3e4f5g6h7i8_add_conversation_star_and_soft_delete.py  e3c17681a0a5_add_deleted_at_to_conversation_message.py  e4f5g6h7i8j9_add_prompts_table.py  f5g6h7i8j9k0_add_chat_visibility_settings.py  g6h7i8j9k0l1_simplify_chat_settings.py  h7i8j9k0l1m2_add_chat_panel_enabled.py  i8j9k0l1m2n3_add_logo_url_to_org_and_team.py  j9k0l1m2n3o4_add_memory_enabled.py  k0l1m2n3o4p5_add_mcp_support.py  l1m2n3o4p5q6_add_mcp_tool_approval.py  m2n3o4p5q6r7_add_tool_configuration.py  n3o4p5q6r7s8_add_chat_media.py  o4p5q6r7s8t9_add_guardrails.py
backend/scripts/: backfill_message_index.py  generate_secrets.py  prestart.sh  setup-infisical.py  setup-langfuse.py  test_rag_pipeline.py
backend/src/backend/: main.py
backend/src/backend/agents/: __init__.py  base.py  context.py  factory.py  llm.py  react_agent.py  schemas.py  tools.py  tracing.py
backend/src/backend/api/: deps.py  main.py
backend/src/backend/api/routes/: agent.py  api_keys.py  audit.py  conversations.py  documents.py  guardrails.py  invitations.py  items.py  mcp.py  media.py  memory.py  organizations.py  prompts.py  rag_settings.py  settings.py  teams.py  theme_settings.py  users.py
backend/src/backend/api/routes/auth/: __init__.py  login.py  password.py  profile.py  signup.py
backend/src/backend/audit/: __init__.py  client.py  middleware.py  schemas.py  service.py
backend/src/backend/auth/: __init__.py  crud.py  deps.py  models.py  token_revocation.py
backend/src/backend/conversations/: __init__.py  crud.py  models.py
backend/src/backend/core/: base_models.py  cache.py  config.py  db.py  exceptions.py  http.py  logging.py  rate_limit.py  secrets.py  security.py  storage.py  tasks.py  uow.py  utils.py
backend/src/backend/documents/: __init__.py  chunking.py  embeddings.py  models.py  parsers.py  service.py  vector_store.py
backend/src/backend/email-templates/: base.html  new_account.html  reset_password.html
backend/src/backend/guardrails/: __init__.py  models.py  patterns.py  service.py
backend/src/backend/i18n/: __init__.py  config.py  context.py  middleware.py  translator.py
backend/src/backend/i18n/translations/: ar.json  bn.json  en.json  es.json  fr.json  hi.json  ja.json  pt.json  ru.json  uk.json  zh.json
backend/src/backend/invitations/: __init__.py  crud.py  models.py
backend/src/backend/items/: __init__.py  crud.py  models.py
backend/src/backend/mcp/: __init__.py  client.py  models.py  service.py  types.py
backend/src/backend/media/: __init__.py  models.py  service.py
backend/src/backend/memory/: __init__.py  extraction.py  service.py  store.py
backend/src/backend/organizations/: __init__.py  crud.py  models.py
backend/src/backend/prompts/: __init__.py  crud.py  models.py
backend/src/backend/rag_settings/: __init__.py  models.py  service.py
backend/src/backend/rbac/: __init__.py  deps.py  permissions.py
backend/src/backend/scripts/: __init__.py  backend_pre_start.py  init_opensearch.py  initial_data.py
backend/src/backend/settings/: __init__.py  models.py  service.py
backend/src/backend/teams/: __init__.py  crud.py  models.py
backend/src/backend/theme_settings/: __init__.py  models.py  service.py  themes.py
frontend/: .env.example  .gitignore  .prettierignore  CLAUDE.md  Dockerfile  eslint.config.js  index.html  nginx.conf  openapi-ts.config.ts  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx  routeTree.gen.ts
frontend/src/components/: app-sidebar.tsx  app-skeleton.tsx  chat-settings.tsx  create-team-dialog.tsx  error-boundary.tsx  mobile-nav.tsx  mode-toggle.tsx  navbar.tsx  search-conversations.tsx  side-panel.tsx  theme-preview.tsx  theme-provider.tsx  user-menu.tsx  workspace-switcher.tsx
frontend/src/components/chat/: AttachmentPicker.tsx  AttachmentPreviewList.tsx  Chat.tsx  ChatContainer.tsx  ChatError.tsx  ChatHistoryDropdown.tsx  ChatInput.tsx  ChatMessage.tsx  CitationBadge.tsx  CodeBlock.tsx  ImagePreview.tsx  MessageMedia.tsx  PromptPicker.tsx  StreamingIndicator.tsx  TableBlock.tsx  ToolApprovalCard.tsx  ToolPicker.tsx  index.ts
frontend/src/components/documents/: document-list.tsx  document-status.tsx  document-upload.tsx  document-viewer.tsx
frontend/src/components/settings/: api-keys.tsx  danger-zone.tsx  entity-details.tsx  guardrail-settings.tsx  index.ts  language-settings.tsx  (+12 more)
frontend/src/hooks/: index.ts  useChat.ts  useDebounce.ts  useDocumentUpload.ts  useIsMobile.ts  useMediaUpload.ts
frontend/src/lib/: api.ts  auth.ts  chat-store.ts  design-tokens.ts  queries.ts  router-context.ts  settings-context.tsx  ui-store.ts  utils.ts  workspace.tsx
frontend/src/locales/: i18n.ts  i18next.d.ts
frontend/src/routes/: __root.tsx  chat.tsx  index.tsx  invite.tsx  login.tsx  organizations.tsx  search.tsx  settings.prompts.tsx  settings.tsx  signup.tsx
opensearch/: default-dashboards.ndjson
scripts/: setup-infisical.py  setup-langfuse.py
(+99 files in other folders)
