[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend with LangGraph AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.124.4",
    "langchain>=0.3.0",  # Core langchain (required for Langfuse callback handler)
    "langchain-anthropic>=0.3.22",
    "langchain-google-genai>=2.1.12",
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.11",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langmem>=0.0.25",  # Memory extraction tools for LangGraph
    "pydantic>=2.12.5",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "sse-starlette>=3.0.4",
    "structlog>=25.5.0",
    "uvicorn>=0.38.0",
    # Auth dependencies
    "pyjwt>=2.10.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "bcrypt==4.3.0",  # Pin bcrypt until passlib supports the latest
    "python-multipart>=0.0.20",
    "email-validator>=2.2.0",
    # Database
    "sqlmodel>=0.0.27",
    "psycopg[binary]>=3.2.7",
    "alembic>=1.16.2",
    # Email
    "emails>=0.6",
    "jinja2>=3.1.4",
    # S3/SeaweedFS storage
    "boto3>=1.35.0",
    # Rate limiting
    "slowapi>=0.1.9",
    # Secrets management
    "infisicalsdk>=1.0.0",
    # OpenSearch for audit and application logs
    "opensearch-py>=2.8.0",
    "aiohttp>=3.13.2",
    # Langfuse for LLM observability
    "langfuse>=3.0.0",
    # MCP (Model Context Protocol) integration
    "langchain-mcp-adapters>=0.1.0",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

# Note: Use `uv run uvicorn backend.main:app --reload` to run the dev server

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
