[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend with LangGraph AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.124.4",
    "langchain>=0.3.0",  # Core langchain (required for Langfuse callback handler)
    "langchain-anthropic>=0.3.22",
    "langchain-google-genai>=2.1.12",
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.11",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langmem>=0.0.25",  # Memory extraction tools for LangGraph
    "pydantic>=2.12.5",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "sse-starlette>=3.0.4",
    "structlog>=25.5.0",
    "uvicorn>=0.38.0",
    # Auth dependencies
    "pyjwt>=2.10.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "bcrypt==4.3.0",  # Pin bcrypt until passlib supports the latest
    "python-multipart>=0.0.20",
    "email-validator>=2.2.0",
    # Database
    "sqlmodel>=0.0.27",
    "psycopg[binary]>=3.2.7",
    "alembic>=1.16.2",
    # Email
    "emails>=0.6",
    "jinja2>=3.1.4",
    # S3/SeaweedFS storage
    "boto3>=1.35.0",
    # Rate limiting
    "slowapi>=0.1.9",
    # Secrets management
    "infisicalsdk>=1.0.0",
    # OpenSearch for audit and application logs
    "opensearch-py>=2.8.0",
    "aiohttp>=3.13.2",
    # Langfuse for LLM observability
    "langfuse>=3.0.0",
    # MCP (Model Context Protocol) integration
    "langchain-mcp-adapters>=0.1.0",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    "bandit>=1.8.0",
    "types-passlib>=1.7.7.20240819",
]

# Note: Use `uv run uvicorn backend.main:app --reload` to run the dev server

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=backend",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["backend"]
omit = [
    "*/tests/*",
    "*/alembic/*",
    "*/scripts/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = [
    "alembic/versions/*.py",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "EM",    # flake8-errmsg
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "PIE",   # flake8-pie
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "TCH",   # flake8-type-checking
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate (commented-out code)
    "PL",    # pylint
    "TRY",   # tryceratops
    "RUF",   # Ruff-specific rules
]
ignore = [
    "E501",    # Line too long (handled by formatter)
    "PLR0913", # Too many arguments to function call
    "TRY003",  # Avoid specifying long messages outside exception class
    "EM101",   # Exception must not use string literal
    "EM102",   # Exception must not use f-string literal
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",     # Unused function arguments (common in fixtures)
    "PLR2004", # Magic value used in comparison
    "S101",    # Use of assert detected
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langgraph.*",
    "langmem.*",
    "opensearch.*",
    "infisicalsdk.*",
    "passlib.*",
    "emails.*",
    "slowapi.*",
    "sse_starlette.*",
    "langfuse.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
