[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend with LangGraph AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.124.4",
    "langchain>=0.3.0",  # Core langchain (required for Langfuse callback handler)
    "langchain-anthropic>=0.3.22",
    "langchain-community>=0.3.0",  # Document loaders
    "langchain-google-genai>=2.1.12",
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.11",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langmem>=0.0.25",  # Memory extraction tools for LangGraph
    "pydantic>=2.12.5",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "sse-starlette>=3.0.4",
    "structlog>=25.5.0",
    "uvicorn>=0.38.0",
    # Auth dependencies
    "pyjwt>=2.10.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "bcrypt==4.3.0",  # Pin bcrypt until passlib supports the latest
    "python-multipart>=0.0.20",
    "email-validator>=2.2.0",
    # Database
    "sqlmodel>=0.0.27",
    "psycopg[binary]>=3.2.7",
    "alembic>=1.16.2",
    # Email
    "emails>=0.6",
    "jinja2>=3.1.4",
    # S3/SeaweedFS storage
    "boto3>=1.35.0",
    # Rate limiting
    "slowapi>=0.1.9",
    # Secrets management
    "infisicalsdk>=1.0.0",
    # OpenSearch for audit and application logs
    "opensearch-py>=2.8.0",
    "aiohttp>=3.13.2",
    # Langfuse for LLM observability
    "langfuse>=3.0.0",
    # MCP (Model Context Protocol) integration
    "langchain-mcp-adapters>=0.1.0",
    # RAG document processing
    "pgvector>=0.3.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "unstructured>=0.15.0",
    "markdown>=3.5.0",  # Required by unstructured for .md file parsing
    "langchain-text-splitters>=0.3.0",
    "tiktoken>=0.8.0",
    "openpyxl>=3.1.0",
    "lxml>=5.0.0",
    "pyyaml>=6.0.0",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    "bandit>=1.8.0",
    "types-passlib>=1.7.7.20240819",
]

# Note: Use `uv run uvicorn backend.main:app --reload` to run the dev server

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=backend",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["backend"]
omit = [
    "*/tests/*",
    "*/alembic/*",
    "*/scripts/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = [
    "alembic/versions/*.py",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "EM",    # flake8-errmsg
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "PIE",   # flake8-pie
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "TCH",   # flake8-type-checking
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate (commented-out code)
    "PL",    # pylint
    "TRY",   # tryceratops
    "RUF",   # Ruff-specific rules
]
ignore = [
    "E501",    # Line too long (handled by formatter)
    "PLR0913", # Too many arguments to function call
    "TRY003",  # Avoid specifying long messages outside exception class
    "EM101",   # Exception must not use string literal
    "EM102",   # Exception must not use f-string literal
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",     # Unused function arguments (common in fixtures)
    "PLR2004", # Magic value used in comparison
    "S101",    # Use of assert detected
]
"scripts/*.py" = [
    "ERA001",  # Commented-out code (documentation in scripts)
    "PLR0912", # Too many branches (complex setup/test scripts)
    "PLR0915", # Too many statements (complex setup/test scripts)
    "PLW2901", # Loop variable overwritten
    "PTH",     # Use pathlib (scripts can use os.path)
    "TRY401",  # Redundant exception in logging (scripts log for debugging)
]
"src/backend/api/routes/*.py" = [
    "ARG001",  # Unused function argument (FastAPI dependency injection: current_user, settings, request)
    "B008",    # Function call in default argument (FastAPI Query/Depends pattern)
    "PLR0912", # Too many branches (complex route handlers)
    "PLR0915", # Too many statements (complex route handlers)
    "PT028",   # Test function parameter default (false positive: FastAPI route, not pytest)
    "TRY301",  # Abstract raise to inner function (HTTPException raises in try blocks are clearer inline)
]
"src/backend/api/routes/**/*.py" = [
    "ARG001",  # Unused function argument (FastAPI dependency injection)
]
"src/backend/core/config.py" = [
    "ARG003",  # Unused class method argument (Pydantic validator 'info' parameter)
    "N802",    # Function name should be lowercase (Pydantic field naming)
]
"src/backend/core/exceptions.py" = [
    "N818",    # Exception name should end with Error (base exception class)
]
"src/backend/agents/*.py" = [
    "PLW0603", # Global statement (singleton pattern for checkpointer/factory)
    "PLR0912", # Too many branches (complex agent logic)
    "PLR0915", # Too many statements (complex agent logic)
]
"src/backend/audit/*.py" = [
    "PLR0912", # Too many branches (complex query building)
    "PLW0602", # Global variable not assigned (client accessed via singleton getter)
    "PLW0603", # Global statement (OpenSearch client singleton)
]
"src/backend/core/secrets.py" = [
    "PLW0603", # Global statement (secrets service singleton)
]
"src/backend/auth/token_revocation.py" = [
    "PLC0415", # Import inside function (circular import avoidance)
]
"src/backend/memory/*.py" = [
    "PLR0912", # Too many branches (extraction logic)
    "PLR0915", # Too many statements (extraction logic)
    "PLW0602", # Global variable not assigned (singleton pattern)
    "PLW0603", # Global statement (memory store singleton)
]
"src/backend/core/db.py" = [
    "ARG001",  # Unused function argument (model parameter for type hints)
]
"src/backend/core/uow.py" = [
    "ARG004",  # Unused static method argument (objects placeholder for bulk operations)
]
"src/backend/main.py" = [
    "ARG001",  # Unused function argument (FastAPI app in lifespan)
]
"src/backend/mcp/client.py" = [
    "ARG001",  # Unused function argument (server_prefixes for future use)
    "PLR0912", # Too many branches (connection testing)
    "PLR0915", # Too many statements (connection testing)
    "PLW0602", # Global variable not assigned (active clients singleton)
]
"src/backend/mcp/service.py" = [
    "PLW2901", # Loop variable overwritten (enum value extraction)
]
"src/backend/documents/vector_store.py" = [
    "ARG002",  # Unused method argument (semantic_weight for hybrid search tuning)
]
"src/backend/theme_settings/service.py" = [
    "PLR0911", # Too many return statements (settings hierarchy resolution)
]
"src/backend/rag_settings/service.py" = [
    "PLR0911", # Too many return statements (settings hierarchy resolution)
]
"src/backend/settings/service.py" = [
    "PLR0912", # Too many branches (complex settings resolution)
    "PLR0915", # Too many statements (complex settings resolution)
]
"src/backend/guardrails/service.py" = [
    "PLR0912", # Too many branches (complex guardrails hierarchy resolution)
    "PLR0915", # Too many statements (complex guardrails hierarchy resolution)
]
"src/backend/core/tasks.py" = [
    "PLR0915", # Too many statements (document processing pipeline)
    "PTH",     # Use pathlib (temp file handling uses os.path)
]
"src/backend/scripts/*.py" = [
    "ERA001",  # Commented-out code (documentation in scripts)
    "PLR0912", # Too many branches (complex setup/test scripts)
    "PLR0915", # Too many statements (complex setup/test scripts)
    "PLW2901", # Loop variable overwritten
    "PTH",     # Use pathlib (scripts can use os.path)
    "TRY401",  # Redundant exception in logging (scripts log for debugging)
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langgraph.*",
    "langmem.*",
    "opensearch.*",
    "infisicalsdk.*",
    "passlib.*",
    "emails.*",
    "slowapi.*",
    "sse_starlette.*",
    "langfuse.*",
    "pgvector.*",
    "pypdf.*",
    "docx.*",
    "unstructured.*",
    "tiktoken.*",
    "boto3.*",
    "botocore.*",
    "structlog.*",
    "infisical_sdk.*",
]
ignore_missing_imports = true

# SQLModel/SQLAlchemy CRUD operations use column methods (.is_(), .desc(), .asc(), .ilike())
# that have incomplete type stubs. These are valid SQLAlchemy operations.
[[tool.mypy.overrides]]
module = [
    "backend.conversations.crud",
    "backend.prompts.crud",
    "backend.invitations.crud",
    "backend.documents.service",
]
disable_error_code = ["union-attr", "attr-defined", "arg-type", "unreachable"]

# LangChain libraries have incomplete/missing type stubs
[[tool.mypy.overrides]]
module = [
    "backend.agents.llm",
    "backend.agents.tools",
    "backend.mcp.client",
]
disable_error_code = ["call-arg", "operator", "arg-type", "dict-item", "unreachable"]

# Agent modules with complex LangGraph/LangChain type interactions
[[tool.mypy.overrides]]
module = [
    "backend.agents.base",
    "backend.agents.react_agent",
    "backend.agents.factory",
]
disable_error_code = ["type-arg", "arg-type", "no-untyped-def", "no-untyped-call", "assignment", "return-value", "typeddict-item"]

# Core secrets module interacts with untyped Infisical SDK
[[tool.mypy.overrides]]
module = ["backend.core.secrets"]
disable_error_code = ["attr-defined", "unreachable", "type-arg", "assignment", "return-value"]

# Memory modules with complex LangChain memory types
[[tool.mypy.overrides]]
module = [
    "backend.memory.service",
    "backend.memory.extraction",
    "backend.memory.store",
]
disable_error_code = ["type-arg", "arg-type"]

# Document modules with complex LangChain/vector store types
[[tool.mypy.overrides]]
module = [
    "backend.documents.embeddings",
    "backend.documents.parsers",
]
disable_error_code = ["arg-type", "no-any-return"]

# API routes with complex dependencies and SSE streaming
[[tool.mypy.overrides]]
module = [
    "backend.api.routes.agent",
    "backend.api.routes.documents",
    "backend.api.routes.mcp",
]
disable_error_code = ["type-arg", "arg-type", "no-untyped-def", "dict-item", "unreachable", "assignment", "operator"]

# Audit modules with OpenSearch client types
[[tool.mypy.overrides]]
module = [
    "backend.audit.client",
    "backend.audit.service",
    "backend.audit.middleware",
]
disable_error_code = ["type-arg", "no-untyped-def", "no-any-return"]

# Script modules
[[tool.mypy.overrides]]
module = [
    "backend.scripts.*",
]
disable_error_code = ["type-arg", "arg-type", "no-untyped-def"]

# Main module with FastAPI/Starlette types
[[tool.mypy.overrides]]
module = ["backend.main"]
disable_error_code = ["no-untyped-def", "arg-type"]

# Core tasks module with background task types
[[tool.mypy.overrides]]
module = ["backend.core.tasks"]
disable_error_code = ["type-arg", "no-untyped-def", "arg-type"]

# Agents tracing module
[[tool.mypy.overrides]]
module = ["backend.agents.tracing"]
disable_error_code = ["type-arg"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
